tests/invalids/invalidWriteNewline.gt
proc main ()
    int m;
begin
    write "asdf\n";
end
